// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Separator /> with dark variant 1`] = `
.c0 {
  border: none;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  margin: 10px 0;
}

<Separator
  variant="dark"
>
  <HR
    margin={true}
    marginLarge={false}
    variant="dark"
  >
    <hr
      className="c0"
    />
  </HR>
</Separator>
`;

exports[`<Separator /> with initial props 1`] = `
.c0 {
  border: none;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  margin: 10px 0;
}

<Separator>
  <HR
    margin={true}
    marginLarge={false}
    variant="medium"
  >
    <hr
      className="c0"
    />
  </HR>
</Separator>
`;

exports[`<Separator /> with light variant 1`] = `
.c0 {
  border: none;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  margin: 10px 0;
}

<Separator
  variant="light"
>
  <HR
    margin={true}
    marginLarge={false}
    variant="light"
  >
    <hr
      className="c0"
    />
  </HR>
</Separator>
`;

exports[`<Separator /> with margin false 1`] = `
.c0 {
  border: none;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

<Separator
  margin={false}
  variant="dark"
>
  <HR
    margin={false}
    marginLarge={false}
    variant="dark"
  >
    <hr
      className="c0"
    />
  </HR>
</Separator>
`;

exports[`<Separator /> with margin true 1`] = `
.c0 {
  border: none;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  margin: 10px 0;
}

<Separator
  margin={true}
  variant="dark"
>
  <HR
    margin={true}
    marginLarge={false}
    variant="dark"
  >
    <hr
      className="c0"
    />
  </HR>
</Separator>
`;

exports[`<Separator /> with marginLarge false 1`] = `
.c0 {
  border: none;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  margin: 10px 0;
}

<Separator
  marginLarge={false}
  variant="dark"
>
  <HR
    margin={true}
    marginLarge={false}
    variant="dark"
  >
    <hr
      className="c0"
    />
  </HR>
</Separator>
`;

exports[`<Separator /> with marginLarge true 1`] = `
.c0 {
  border: none;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  margin: 10px 0;
  margin: 50px 0;
}

<Separator
  marginLarge={true}
  variant="dark"
>
  <HR
    margin={true}
    marginLarge={true}
    variant="dark"
  >
    <hr
      className="c0"
    />
  </HR>
</Separator>
`;

exports[`<Separator /> with medium variant 1`] = `
.c0 {
  border: none;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  margin: 10px 0;
}

<Separator
  variant="medium"
>
  <HR
    margin={true}
    marginLarge={false}
    variant="medium"
  >
    <hr
      className="c0"
    />
  </HR>
</Separator>
`;
